Fix footer appearance on mobile and low width screens

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -570,8 +570,12 @@ footer {
         }
     }
 
-    .copyright a .octicon {
-        margin-right: 4px;
+    .copyright a {
+        display: inline-block;
+
+        .octicon {
+            margin-right: 4px;
+        }
     }
 
     span {
